# StreamMedia

./: settings.gradle
Commonlib/: build.gradle
Commonlib/src/main/java/com/lib/commonlib/dispatch/: MessageDispatch.java
StreamMediaJni/: CMakeLists.txt  build.gradle
StreamMediaJni/src/androidTest/java/com/stream/media/jni/: ExampleInstrumentedTest.java
StreamMediaJni/src/main/: AndroidManifest.xml
StreamMediaJni/src/main/cpp/: com_stream_media_jni_MediaJni.h
StreamMediaJni/src/main/cpp/android/codec/: cloudvoide_android_video_codec.c  cloudvoide_android_video_codec.h
StreamMediaJni/src/main/cpp/android/display/: cloudvoice_android_video_display.c  cloudvoice_android_video_display.h  cloudvoice_shader_utils.c  cloudvoice_shader_utils.h
StreamMediaJni/src/main/cpp/android/log/: cloudvoice_android_log.c  cloudvoice_android_log.h
StreamMediaJni/src/main/cpp/business/: cloudvoice_media_jni.c  cloudvoice_media_jni.cpp  cloudvoice_media_manager.c  cloudvoice_media_manager.h  cloudvoice_media_manager_cpp.cpp  cloudvoice_media_manager_cpp.h
StreamMediaJni/src/main/cpp/business/client/: cloudvoice_pull_stream_player.c  cloudvoice_pull_stream_player.h  cloudvoice_push_stream_client.c  cloudvoice_push_stream_client.h
StreamMediaJni/src/main/cpp/business/model/: cloudvoice_media_params.c  cloudvoice_media_params.h  cloudvoice_player_param.c  cloudvoice_player_param.h  cloudvoice_stream_param.c  cloudvoice_stream_param.h
StreamMediaJni/src/main/cpp/business/rtmp/: cloudvoice_rtmp_client.c  cloudvoice_rtmp_client.h
StreamMediaJni/src/main/java/com/stream/media/camera/: Camera2Impl.java
StreamMediaJni/src/main/java/com/stream/media/codec/: FileStorage.java  VideoData.java  VideoDataCallback.java  VideoDecode.java  VideoEncoder.java
StreamMediaJni/src/main/java/com/stream/media/jni/: MediaJni.java  PlayerParam.java  StreamParam.java  VideoData.java
StreamMediaJni/src/main/java/com/stream/media/view/: CameraPriviewView.java  PlayerDisplayView.java  VideoDisplayView.java
StreamMediaJni/src/main/res/values/: strings.xml
StreamMediaJni/src/test/java/com/stream/media/jni/: ExampleUnitTest.java
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/stream/media/demo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: MediaCodecTest.cpp  MediaCodecTest.h  StreamMediaNative.cpp  com_stream_media_demo_jni_JniTest.h  com_stream_media_demo_nativelib_StreamMediaNative.h  generate_java_head_file.sh  log.c  log.h  native-lib.cpp
app/src/main/cpp/CommonLib/: listop.h
app/src/main/cpp/CommonLib/android/: cl_android_jni.c  cl_android_jni.h  cl_android_jni_base.c  cl_android_jni_base.h
app/src/main/cpp/CommonLib/common/: cl_common_class.c  cl_common_class.h  cl_common_endian.h
app/src/main/cpp/CommonLib/container/: cl_sdl_array.h
app/src/main/cpp/CommonLib/log/: cl_sdl_abstract_log.c  cl_sdl_abstract_log.h  cl_sdl_log.c  cl_sdl_log.h
app/src/main/cpp/CommonLib/thread/: cl_sdl_mutex.c  cl_sdl_mutex.h  cl_sdl_thread.c  cl_sdl_thread.h
app/src/main/cpp/JniTest/: JniTest.cpp  Tree.c  Tree.h
app/src/main/cpp/StreamMedia/audio/: sm_audio_data.c  sm_audio_data.h  sm_audio_record.c  sm_audio_record.h  sm_opensles_record.c
app/src/main/cpp/StreamMedia/buffer/: sm_data_buffer.c  sm_data_buffer.h  sm_video_data_buffer.c  sm_video_data_buffer.h
app/src/main/cpp/StreamMedia/display/: sm_egl.c  sm_egl.h  sm_gles2_display.c  sm_gles2_display.h  sm_video_display.c  sm_video_display.h  sm_vidio_display.c  sm_vidio_display.h
app/src/main/cpp/StreamMedia/display/gles2/: color.c  gles2_internal.c  gles2_internal.h  renderer_rgb.c  renderer_yuv420p.c  renderer_yuv420sp.c  renderer_yuv444p10le.c  shader.c  sm_gles2_utils.c
app/src/main/cpp/StreamMedia/display/gles2/fsh/: rgb.fsh.c  yuv420p.fsh.c  yuv420sp.fsh.c  yuv444p10le.fsh.c
app/src/main/cpp/StreamMedia/display/gles2/vsh/: mvp.vsh.c
app/src/main/cpp/StreamMedia/model/: sm_data_callback_interface.h  sm_video_data.c  sm_video_data.h  sm_video_fourcc.h
app/src/main/cpp/StreamMedia/video/: sm_mediacodec_test.c  sm_mediacodec_test.h  sm_video_codec.c  sm_video_codec.h
app/src/main/cpp/demo/: player.cpp  player.h  surface.cpp
app/src/main/cpp/demo/include/libavcodec/: avcodec.h
app/src/main/cpp/demo/include/libavformat/: avformat.h
app/src/main/cpp/demo/include/libavutil/: base64.h  log.h
app/src/main/cpp/librtmp/: hashswf.c
app/src/main/cpp/openssl/: krb5_asn.h  kssl.h  kssl_lcl.h  ocsp.h  opensslconf.h  ssl.h  ssl3.h
app/src/main/cpp/test/: RtmpPullClient.c  RtmpPullClient.h  RtmpPushClient.c  RtmpPushClient.h  com_medialib_audio_base_OpenslEs.h  com_medialib_video_OpenGlEs.h  test_opengles.c  test_opengles.cpp  test_opengles_Cpp.cpp  test_opensles.cpp
app/src/main/java/com/medialib/audio/base/: OpenslEs.java
app/src/main/java/com/medialib/video/: OpenGlEs.java
app/src/main/java/com/stream/media/demo/: JniTestActivity.java  MainActivity.java  TestCameraActivity.java  TestOpenslesActivity.java
app/src/main/java/com/stream/media/demo/business/: VideoSeviceTest.java
app/src/main/java/com/stream/media/demo/camera/: Camera2Holder.java  CameraInfo.java  CodecUtils.java  DataCallback.java  ImageUtil.java  VideoConstants.java  VideoData.java  VideoDataCallback.java  VideoDataInfo.java  VideoDecode.java  VideoEncoder.java  VideoParam.java
app/src/main/java/com/stream/media/demo/jni/: JniTest.java
app/src/main/java/com/stream/media/demo/nativelib/: StreamMediaNative.java
app/src/main/java/com/stream/media/demo/network/: NetDataCallback.java  TcpClientTest.java
app/src/main/java/com/stream/media/demo/utils/: ArrayUtils.java  CheckPermissionUtils.java  CommonLib.java  FileStorage.java  MLog.java  PermssionUtils.java
app/src/main/res/layout/: activity_jni_test.xml  activity_main.xml  activity_test_camera.xml  activity_test_opensles.xml
app/src/test/java/com/stream/media/demo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
